Lecture 12: linear models for causal inference, properties of OLS and model validation

--- a/_Rmd/8-linear.Rmd
+++ b/_Rmd/8-linear.Rmd
@@ -20,8 +20,7 @@ To motivate some notation, suppose that we want to fit a linear model to a respo
 
 $$y\_i = \beta\_0 + \beta\_1x\_{1,i} + \beta\_2 x\_{2,i} + ... + \beta\_px\_{p,i} + \epsilon\_i$$
 
-where the subscript $i$ specifies that we are talking about the model for individual $i$ from our sample. Notice that every individual has the same values of $\beta\_1$, ..., $\beta\_p$ (since these don't depend on $i$), but different values for $y\_i, x\_{1, i}, x\_{2, i}, ..., x\_{p, i}, \epsilon\_i$. To frame this in the setting of the example above, each individual has different weights, ages, genders, etc but the same linear relationship exists between height and these predictor variables for each indiviudal.
-
+where the subscript $i$ specifies that we are talking about the model for individual $i$ from our sample. Notice that every individual has the same values of $\beta\_1$, ..., $\beta\_p$ (since these don't depend on $i$), but different values for $y\_i, x\_{1, i}, x\_{2, i}, ..., x\_{p, i}, \epsilon\_i$. To frame this in the setting of the example above, each individual has different weights, ages, genders, etc but the same linear relationship exists between height and these predictor variables for each individual. 
 
 Suppose that we have a sample of $n$ individuals from a population. We can write the above model in **matrix form** as follows
 
@@ -48,14 +47,19 @@ is our $p \times 1$ **coefficient vector**, and
 
 $$\epsilon = \left[ \begin{array}{c}\epsilon\_1\\\ \epsilon\_2 \\\   \vdots\\\   \epsilon\_n\end{array} \right]$$
 
-is our random $n \times 1$ **error vector**, whose entries specify the deviations of each indivuals response from the specified linear form. We typically assume that $E(\epsilon | X) = 0$ and $Var(\epsilon | X) = \sigma^2 I$, but we do not necessarily *need* normality. As a result of these assumptions, we have that the expected response is given by
+is our random $n \times 1$ **error vector**, whose entries specify the deviations of each individuals response from the specified linear form. We typically assume that $E(\epsilon | X) = 0$ and $Var(\epsilon | X) = \sigma^2 I$, but we do not necessarily *need* normality. As a result of these assumptions, we have that the expected response is given by
 
 $$E(Y | X) = E(X \beta + \epsilon | X) = E(X \beta| X) + E(\epsilon | X) = X \beta$$
 
-The model, $Y = X \beta + \epsilon$ is commonly referred to as a *linear regression* model. However, recall that both $\beta$ and $\epsilon$ are unknown! If we knew $\beta$, we could make predictions of the form $\hat{Y} = X\beta$. Thus, to make a linear regression model useful, we need to *estimate* the paremteters, $\beta$. 
+The model, $Y = X \beta + \epsilon$ is commonly referred to as a *linear regression* model. However, recall that both $\beta$ and $\epsilon$ are unknown! If we knew $\beta$, we could make predictions of the form $\hat{Y} = X\beta$. Thus, to make a linear regression model useful, we need to *estimate* the parameters, $\beta$. To recap, the primary assumptions underlying the linear regression model (beside from the obvious assumption of linearity) are
 
+* The errors $\epsilon\_i$ are independent and identically distributed (iid) with mean 0 and variance $\sigma^2$.
 
-#### Fitting a linear model: OLS
+* If the $X$ are random, we assume that $\epsilon$ is independent of $X$.
+
+Note that nowhere have we explicitly assumed a Gaussian distribution for the errors!
+
+### Fitting a linear model using OLS
 
 
 How do we come up with an estimator $\hat{\beta}$ of the population coefficients $\beta$? In general, we want to find the value of $\hat{\beta}$ such that the predicted $Y$ values, $\hat{Y} = X \hat{\beta}$ are as close to the true values, $Y$, as possible. If we use the $L^2$ measure of "closeness", then we want to find the value of $\beta$ that minimizes the quadratic loss function:
@@ -69,23 +73,20 @@ where $X\_i = [x\_{i,1}~ x\_{i, 2} ~... ~x\_{i, p}]$ is the $i$th row of the des
 If our design matrix, $X$, is full rank, then the value of $\beta$ that minimizes the above expression can be written as 
 $$\hat{\beta}\_{OLS} = \left(X^TX\right)^{-1}X^T Y $$
 
-and this is what we call the **ordinary least squares** (OLS) estimator (because it is the minimizer of the *squared loss* function). If you have never encountered this calculation before, we encourage you to try it yourself (we promise it's not too hard - just set the derivative to zero and solve for $\beta$!). Note that if $X$ is not full rank, it is possible to calcualte a generalized inverse using singular value decomposition, however in this case, the solution (the minimizer) is not unique, as we will explore below. 
+and this is what we call the **ordinary least squares** (OLS) estimator (because it is the minimizer of the *squared loss* function). If you have never encountered this calculation before, we encourage you to try it yourself (we promise it's not too hard - just set the derivative to zero and solve for $\beta$!). Note that if $X$ is not full rank, it is possible to calculate a generalized inverse using singular value decomposition, however in this case, the solution (the minimizer) is not unique, as we will explore below. 
 
 
 If this is the first time you've seen linear regression, we encourage you to do some external research, because we will be assuming familiarity with general linear models from this point.
 
 
-#### Sources of randomness 
 
-Let's ask a question: is $\hat{\beta}$ random? What about $\beta$? To answer this question, let's ask, where does the randomness in the model come from? We usually consider $X$ to be fixed (but this is not a requirement), and $\beta$ is a *constant* (but unobservable) population variable. **The only source of randomness in the regression model $Y = X \beta + \epsilon$ is in the random error, $\epsilon$** ($Y$ is random only because it depends on $\epsilon$). Keep this in mind, because it is very important! So we ask again: is $\hat{\beta}$ random? Look again at the formula $\hat{\beta} = \left(X^TX\right)^{-1}X^T Y$. The $X$ matrices are fixed, but $Y$ is random (due to its dependency on $\epsilon$). Thus, the answer is: yes, $\hat{\beta}$ is random! In fact, if we were to draw another sample and re-estimate $\beta$ using the new $X^\*$ and $Y^\*$, then we would get a different value for our estimator $\hat{\beta}^\* = \left(X^{\*T}X^\*\right)^{-1}X^{\*T} Y^\*$ despite the fact thatboth $\hat{\beta}$ and $\hat{\beta}^\*$ estimates of $\beta$: they can both be considered as realizations of the same **random variable**, $\hat{\beta}$. 
+### Sources of randomness 
 
-
-#### Using OLS for categorical data
-
-As a side note, although it is uncommon to use OLS to generate a linear model for two-class (binary) problems (a more modern approach is to use logistic regression, which we will discuss later), it remains a perfectly reasonable thing to do. If we had three-class or other multi-class problems, however, OLS is no longer reasonable, primarily because the labelling of these categorical classes as the numbers $1, 2, 3, 4, ...$ implies that class $1$ is more similar to class $2$ than it is to class $4$ (simply because the numbers $1$ and $2$ are closer together than the numbers $1$ and $4$), which is, in most cases, monstrously incorrect! Thus, typically when we consider linear regression, we are assuming that our response variable, $Y$, is *continuous*.
+Let's ask a question: is $\hat{\beta}$ random? What about $\beta$? To answer this question, let's ask, where does the randomness in the model come from? We usually consider $X$ to be fixed (but this is not a requirement), and $\beta$ is a *constant* (but unobservable) population variable. **The only source of randomness in the regression model $Y = X \beta + \epsilon$ is in the random error, $\epsilon$** ($Y$ is random only because it depends on $\epsilon$). Keep this in mind, because it is very important! So we ask again: is $\hat{\beta}$ random? Look again at the formula $\hat{\beta} = \left(X^TX\right)^{-1}X^T Y$. The $X$ matrices are fixed, but $Y$ is random (due to its dependency on $\epsilon$). Thus, the answer is: yes, $\hat{\beta}$ is random! In fact, if we were to draw another sample and re-estimate $\beta$ using the new $X^\*$ and $Y^\*$, then we would get a different value for our estimator $\hat{\beta}^\* = \left(X^{\*T}X^\*\right)^{-1}X^{\*T} Y^\*$ despite the fact that both $\hat{\beta}$ and $\hat{\beta}^\*$ estimates of $\beta$: they can both be considered as realizations of the same **random variable**, $\hat{\beta}$. 
 
 
-#### The hat matrix: generating predictions
+
+### The hat matrix: generating predictions
 
 In summary if we use OLS to estimate, $\beta$, the equation that we get (and thus the predictions from the linear model that we obtain) can be given by
 
@@ -94,7 +95,7 @@ $$\hat{Y} = X\hat{\beta}_{OLS} = X\left(X^TX\right)^{-1}X^TY = HY$$
 where $H$ is called the **hat matrix** (a cute name that arose due to the fact that $H$ puts a "hat" on Y). To be more technical, the hat matrix, $H$, is a projection matrix onto the linear space spanned by the columns of $X$. Note that $X$ is a matrix, so try your hardest to resist the temptation to cancel the $X$'s in the above expression (we cannot rearrange matrices like we can scalars: $ X\left(X^TX\right)^{-1}X^T \neq  \left(X^TX\right)^{-1}X^TX = I$).
 
 
-#### Residuals
+### Residuals
 
 
 We can rearrange the above equation as
@@ -108,7 +109,118 @@ So given that we have a **fitted linear model**, $\hat{Y} = X \hat{\beta}$, how 
 $$RSS = \sum\_{i=1}^n (y\_i - \hat{y}\_i)^2 = \sum\_{i=1}^n e\_i^2$$
 
 
-#### Leverage
+### Properties of the OLS estimator $\hat{\beta}$
+
+Note that OLS was just one approach (in particular, minimizing the squared, or $L^2$, loss: $\sum\_{i=1}^n(Y\_i - X\_i \beta)^2$) to estimating the coefficient vector, $\beta$. There are a number of alternative approaches such as the least absolute difference (LAD) which minimizes the $L^1$-loss $\sum\_{i=1}^n|Y\_i - X\_i \beta|$. However, there are a number of properties that the OLS approach possesses that makes it particularly attractive as an estimator. Namely, the OLS estimator is unbiased and has an asymptotic Gaussian distribution. We will explore these properties below.
+
+
+#### Unbiasedness
+
+It is not hard to show that the OLS estimator, $\hat{\beta}\_{OLS}$, is *unbiased*. That is, on average, over random samples from our population, our estimate, $\hat{\beta}\_{OLS}$, will be equal to the "true" population value, $\beta$:
+
+\begin{aligned}
+E\left(\hat{\beta}\_{OLS} \Big| X\right) &= E\left( (X^TX)^{-1}X^TY \Big| X \right)\\\
+& = (X^TX)^{-1}X^T E(Y | X)\\\
+& = (X^TX)^{-1}X^T X\beta\\\
+& = \beta
+\end{aligned}
+
+#### Variance
+
+Recall that the only source of randomness in the linear model is the random error, $\epsilon$. In particular, we assumed that the $\epsilon\_i$ were iid with variance $\sigma^2$. This implies that the variance-covariance matrix of the vector $\epsilon = (\epsilon\_1, ..., \epsilon\_n)$ is given by
+$$Cov(\epsilon | X) = \sigma^2 I \_{n \times n} = \left[ \begin{array}{cccc} \sigma^2 & 0 & \dots & 0\\\
+0 & \sigma^2 & \dots & 0 \\\
+\vdots & \vdots & \ddots & \vdots \\\
+0 & 0 & \dots & \sigma^2 \end{array} \right]$$
+The variance-covariance matrix of the OLS estimator, $\hat{\beta}\_{OLS}$, is given by:
+
+\begin{aligned}
+Cov\left( \hat{\beta}\_{OLS} \Big| X \right) & = Cov\left( (X^TX)^{-1}X^TY \Big| X \right)\\\
+& = (X^TX)^{-1}X^T ~Cov(Y | X)~ X(X^TX)^{-1}\\\
+& = (X^TX)^{-1}X^T ~Cov(X\beta + \epsilon | X)~ X(X^TX)^{-1}\\\
+& = (X^TX)^{-1}X^T ~Cov(\epsilon | X)~ X(X^TX)^{-1}\\\
+& = (X^TX)^{-1}X^T~\sigma^2 I\_{n \times n}~X(X^TX)^{-1}\\\
+& = (X^TX)^{-1}\sigma^2
+\end{aligned}
+
+
+##### Example:
+For a simple example, suppose that we have a simple linear model $y\_i = \beta\_0 + \beta x\_i + \epsilon\_i$, then 
+$$X = [1 ~~~ x] = \left[ \begin{array}{cc} 1 & x\_1\\\ 1 & x\_2 \\\ \vdots & \vdots \\\ 1 & x\_n \end{array}\right]$$
+
+which implies that 
+$$(X^TX)^{-1} = \frac{1}{\sum\_{i=1}^n x\_i^2 - \left( \sum\_{i=1}^n x\_i\right)^2}\left[ \begin{array}{cc} \frac{1}{n} \sum\_{i=1}^n x\_i^2 & - \bar{x}\\\ - \bar{x} & 1 \end{array} \right]$$
+
+so our estimate is given by
+
+$$\beta = (X^TX)^{-1}X^Ty = \left[\bar{y} - \frac{Cov(x, y)}{Var(x)} \bar{x}~,~~ \frac{Cov(x, y)}{Var(x)} \right].$$
+
+
+From here, it is easy to calculate the variance of $\beta\_0$ and $\beta\_1$:
+$$Var(\beta\_0) = \sigma^2\frac{\frac{1}{n} \sum\_{i=1}^n x\_i^2}{\sum\_{i=1}^n x\_i^2 - \left( \sum\_{i=1}^n x\_i\right)^2},$$
+
+and
+
+$$Var(\beta\_1) = \sigma^2\frac{1}{\sum\_{i=1}^n x\_i^2 - \left( \sum\_{i=1}^n x\_i\right)^2}.$$
+
+
+
+#### Asymptotic normality
+
+Since the OLS estimate of $\beta$ corresponds to the *maximum likelihood estimate*, theoretical results tell us that when we have a large sample size, the distribution of our estimator, $\hat{\beta}$ should be approximately Gaussian. What should the mean and variance of this distribution be? We found the mean and variance of $\hat{\beta}$ above, so our distributional result is
+
+$$\hat{\beta}\_{OLS} \overset{n \rightarrow \infty}{\sim} N\left( \beta, \sigma^2 (X^TX)^{-1} \right)$$
+
+
+In fact this asymptotic result follows from the **central limit theorem** (CLT) which tells us that if we have a sequence of iid random variables, $X\_1, ..., X\_n$, drawn from *any distribution*, and if $E(X\_i) = \mu$ and $Var(X\_i) = \sigma^2 < \infty$ for each $i$, then the distribution of the sample average, $\bar{X} = \frac{1}{n}\sum\_{i=1}^n X\_i$, tends to a normal distribution. More specifically, the result tells us that 
+
+$$ \bar{X} \overset{d}{\rightarrow} N\left(\mu, \frac{\sigma^2}{n}\right)$$
+
+which is quite remarkable, given that our sample of $X\_i$'s could have come from any distribution at all (we just need the samples to be iid)! Most existing proofs of this fact are fairly tedious and fail to lead to an improved sense of intuition. An outline of the more interesting and intuitive proofs are discussed in [an enlightening blog post](https://terrytao.wordpress.com/2010/01/05/254a-notes-2-the-central-limit-theorem/) by Terence Tao.
+
+
+
+#### Estimating $\sigma^2$
+
+Note that the variance of $\hat{\beta}_{OLS} = \sigma^2 (X^TX)^{-1}$ depends on $\sigma^2$, the common variance of $\epsilon\_i$. If we want to get an idea of how variable our estimate, $\hat{\beta}\_{OLS}$ is, then it is important that we have some idea of what $\sigma^2$ is equal to. Unfortunately, we rarely do! Thus we need to estimate $\sigma^2$ somehow. As a first approach, perhaps we could estimate $\sigma^2$ by looking, not at the variance of $\epsilon\_i$ (since these are unobserved), but rather at the variance of the resuls, $e\_i$, which can be thought of as realizations of the error terms $\epsilon\_i$ (in fact, they would be realizations of $\epsilon$ if the proposed linear model was the "truth"). Recall that
+
+\begin{aligned}
+e &= Y - HY = (I - H)Y\\\
+& = (I- H)(X\beta + \epsilon)\\\
+& = (I - H) \epsilon
+\end{aligned}
+
+Then perhaps, since $\sigma^2 = Var(\epsilon\_i) = E(\epsilon\_i^2) \approx \frac{\sum\_{i=1}^n e\_i^2}{n}$, a reasonable estimate might be
+
+$$\hat{\sigma}^2 = \frac{\\|e\\|\_2^2}{n} = \frac{\sum\_{i=1}^n e\_i^2}{n}$$
+
+
+This estimator, though not far from what we are searching for, turns out to be biased:
+
+\begin{aligned}
+E\left[ ||e||^2 \Big| X \right] & = E \left[ ||(I - H) \epsilon||^2 \Big | X\right]\\\
+& = E\left[ \epsilon^T (I - H) \epsilon \Big| X\right] && (I - H)^2 = I - H \text{ and } ||a||^2 = a^Ta\\\
+& = E \left[ tr(\epsilon^T(I - H) \epsilon )\Big| X \right] && tr(a) = a \text{ for }a \in \mathbb{R} \\\
+& = E\left[ tr((I - H) \epsilon \epsilon^T) \Big| X \right] && tr(AB) = tr(BA)\\\
+& = tr\left[ E\left((I - H) \epsilon \epsilon^T \Big| X \right)\right]\\\
+& = tr\left[(I - H) E\left(\epsilon \epsilon^T \Big| X \right)\right]\\\
+& = tr\left[(I - H) Cov( \epsilon) \right]\\\
+& = \sigma^2 tr(I - H)\\\
+& = \sigma^2 (n  -p) &&\text{(trace of a proj. matrix is its rank)}
+\end{aligned}
+
+Thus an unbiased estimate of $\sigma^2$ is given by
+
+$$\hat{\sigma}^2 = \frac{\sum\_{i=1}^ne\_i^2}{n-p}$$
+
+
+### Using OLS for categorical data
+
+As a side note, although it is uncommon to use OLS to generate a linear model for two-class (binary) problems (a more modern approach is to use logistic regression, which we will discuss later), it remains a perfectly reasonable thing to do. If we had three-class or other multi-class problems, however, OLS is no longer reasonable, primarily because the labeling of these categorical classes as the numbers $1, 2, 3, 4, ...$ implies that class $1$ is more similar to class $2$ than it is to class $4$ (simply because the numbers $1$ and $2$ are closer together than the numbers $1$ and $4$), which is, in most cases, monstrously incorrect! Thus, typically when we consider linear regression, we are assuming that our response variable, $Y$, is *continuous*.
+
+
+
+### Leverage
 
 
 It is an unfortunate fact that OLS estimates of $\beta$ are extremely sensitive to outliers in the data. How does one measure the "outlierness" of a given data point? One common approach (outside of the imprecise art of eyeballing) is to use a quantity called **leverage**, an extremely useful concept from regression diagnostics and robust statistics. It turns out that for observation $i$, the $i$th diagonal element of the hat matrix, $H$, is its **leverage score**, $h\_i$. That is,
@@ -118,11 +230,11 @@ Interestingly, **leverage doesn't measure "outlierness" in terms of the response
 
 
 
-#### Least squares when $X$ is not full rank
+### Least squares when $X$ is not full rank
 
 To obtain the estimate $\hat{\beta} = \left(X^TX\right)^{-1}X^T Y$, we needed to be able to invert the matrix $X^TX$. When $X$ is not full-rank (as is the case when we have more predictor variables than observations; a very common phenomenon in the modern world), this is not possible. Fortunately, however, it is still possible to generate a solution to the least squares problem (i.e. to obtain an estimate of $\beta$), although such a solution is no longer unique.  
 
-In the non-full-rank case, to obtain an estimate of $\beta$, instead of attempting to calcualte the uncalculatable inverse of $X^TX$, we instead calculate the pseudo-inverse of $X^TX$ using Singular Value Decomposition (SVD). 
+In the non-full-rank case, to obtain an estimate of $\beta$, instead of attempting to calculate the uncalculatable inverse of $X^TX$, we instead calculate the pseudo-inverse of $X^TX$ using Singular Value Decomposition (SVD). 
 
 Let's begin with a useful definition:
 
@@ -145,7 +257,7 @@ The **pseudo-inverse** of $X$ is then given by
 
 $$X^{-} = V \cdot 1/S \cdot U^T$$
 
-where $1/S$ is the diagonal matrix whose diagnoal entries are the reciprocal of the non-zero elements of $S$ (the zero-entries are set to zero).
+where $1/S$ is the diagonal matrix whose diagonal entries are the reciprocal of the non-zero elements of $S$ (the zero-entries are set to zero).
 
 In the case of OLS, we can use $\left(X^TX\right)^{-}$ in place of the traditional inverse $\left(X^TX\right)^{-1}$ to find a particular (but non-unique) solution to the LS problem. The resultant fitted value is the projection of $Y$ onto the space spanned by the columns of $X$ and it is unique.
 
@@ -167,12 +279,46 @@ Suppose that we only want to use 10 of the 154 predictor variables to train the 
 -->
 
 
+## Using regression in Causal Inference
+
+Recall our discussion on [causal inference](http://rlbarter.github.io/Stat_Models_Book/3-causal.html). In this section, we introduced the Neyman-Rubin model of potential outcomes where we have two possible outcomes: the outcome if subject $i$ is assigned to treatment, $Y\_{i1}$, and the outcome if subject $i$ is assigned to control $Y\_{i0}$. For any given subject, we can only observe *one* of these two outcomes, and we can write the response that we do observe as
+$$Y\_i = ( 1- T\_i) Y\_{i0} + T\_i Y\_{i1}$$
+
+where $T\_i$ is the treatment indicator (and is a *random variable*) whereby $T\_i = 1$ is subject $i$ is assigned to treatment and $T\_i = 0$ if subject $i$ is assigned to control. We are interested in estimating the causal effect:
+$$\frac{1}{N}\sum\_{i=1}^N (Y\_{i1} - Y\_{i0})$$
+which is an unobservable quantity that we typically estimate by the observed average outcome difference between the treatment and control groups:
+$$\tau = \frac{1}{n\_1} \sum\_{i : T\_i = 1} Y\_i - \frac{1}{n\_0} \sum\_{i : T\_i = 0} Y\_i$$
+
+It turns out that we can very naturally relate causal effect and linear regression. Suppose that we fit a linear model to the outcome using treatment assignment as the sole predictor:
+
+$$Y\_i = \beta\_0 + \beta\_1 T\_i + \epsilon\_i$$
+
+Then $\beta$ can be thought of as the treatment effect on the outcome, and we can estimate it using OLS as described above. It can be shown that this estimate of the treatment effect is more or less equivalent to the simple estimator of the sample average treatment effect (SATE) of the form:
+
+$$\tau = \frac{1}{n\_1} \sum\_{i : T\_i = 1} Y\_i - \frac{1}{n\_0} \sum\_{i : T\_i = 0} Y\_i$$
+
+It is common to "adjust for covariates" by adding them into the regression equation
+
+$$Y\_i = \beta\_0 + \beta\_1 T\_i + \beta\_2 x\_i +  \epsilon\_i$$
+
+however, the only reason we should ever even be *tempted* to do this is if we believe that the covariate, $x$, is imbalanced between treatment and control in some way. This approach involving estimating the causal effect of the treatment by estimating $\beta\_1$ using regression in which we adjust for covariates seems simple, and at first glance, very reasonable; in fact, this is the reason that this approach is so widely used (and misused!). There are however a huge number of critiques of this approach, primarily in the case of observational studies. One of the main issues is the assumption of *linearity*. If this assumption is unjustified, then our OLS estimates will be significantly worse than the simple difference in means SATE estimates! Moreover, if we adjust for covariates in our linear model, it is often the case that we will introduce extra bias into our estimate of treatment effect! For example, Berk et al. (2010) claim that "Random assignment does not justify any form of regression with covariates. If regression adjustments are introduced nevertheless, there is likely to be bias in any estimates of treatment effects and badly biased standard errors". There are examples of adjustments for which this disparaging view of using regression to adjust for covariates is not justified (see, for an example, [Lin (2010)](http://www.stat.berkeley.edu/~winston/agnostic.pdf)), but these models should still be used with caution.
+
+In general, the only reason we would want to use regression to estimate our causal effect is to adjust for covariates; if we did not feel that any of our covariates differed between the treatment and control group, then we might as well simply calculate the more general SATE estimator, $\tau$. If, however, we did feel concerned about covariate imbalance, then perhaps this adjusted regression is justified, however, there are a number of other approaches to consider: notable we might perform *matching* which involves comparing subjects in the treatment to comparable subjects in the control group (where two subjects are comparable if they have similar covariate measurements).
+
+
+
+
+
+
+
+
+
 
 ## Regression towards the mean (the regression fallacy)
 
 Consider students in a class where the assessment includes a midterm in the middle of the semester and a final exam at the end of the semester. If we look at the students who do really well in the midterm and then examine their final exam grade. With a very high probability, although these students will still do very well in the final exam, they will do worse in the final exam than in the midterm. Similarly, if we look at the students who did not do well in the midterm, then there is a very high chance that they will do better in the final exam than they did in the final exam.
 
-We can propose many plausable mechanisms for why this may happen: for example, the students who did very well in the midterm felt that they could relax and didn't study as hard for the final exam as they otherwise might have if they were dissapointed with their grade. Similarly, the students who performed poorly in the midterm were worried about their grade and studied very hard for the final exam with the end result that they did better on the final exam than they did on the midterm.
+We can propose many plausible mechanisms for why this may happen: for example, the students who did very well in the midterm felt that they could relax and didn't study as hard for the final exam as they otherwise might have if they were disappointing with their grade. Similarly, the students who performed poorly in the midterm were worried about their grade and studied very hard for the final exam with the end result that they did better on the final exam than they did on the midterm.
 
 
 
